--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -1,17 +1,14 @@
-name: flake8
+name: Flake8
 
 on: [push, pull_request]
 
 jobs:
-  flake8:
+  flake8_py3:
     runs-on: ubuntu-latest
     
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-        
-      - name: Install flake8
-        run: pip install flake8
         
       - name: Flake8 action
         # You may pin to the exact commit or the version.
@@ -19,4 +16,4 @@ jobs:
         with:
           # The name of the check to add annotations to.
           # Generally the same as the job that uses this action
-          checkName: 'flake8'
+          checkName: 'flake8_py3'
