--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -7,12 +7,20 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3
+      
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      
+      - name: Install flake8
+        run: pip install flake8
         
       - name: Flake8 action
         # You may pin to the exact commit or the version.
-        uses: suo/flake8-github-action@releases/v1
+        uses: suo/flake8-github-action@v1
         with:
           # The name of the check to add annotations to.
           # Generally the same as the job that uses this action
