--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -15,6 +15,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
         
+      - name: Install flake8
+        run: pip install flake8
+        
       - name: Flake8 action
         # You may pin to the exact commit or the version.
         uses: suo/flake8-github-action@v1
