--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -15,15 +15,20 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
         
-      - name: Install flake8
-        run: pip install flake8
-        
-      - name: Flake8 action
+      - name: Lint with flake8
+        run: |
+          pip install flake8
+          flake8 .
+      
+      #- name: Install flake8
+      #  run: pip install flake8
+
+      #- name: Flake8 action
         # You may pin to the exact commit or the version.
-        uses: suo/flake8-github-action@v1
-        with:
+      #  uses: suo/flake8-github-action@v1
+      #  with:
           # The name of the check to add annotations to.
           # Generally the same as the job that uses this action
-          checkName: 'flake8_py3'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #    checkName: 'flake8_py3'
+      #  env:
+      #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
