--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -7,13 +7,18 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
           python-version: 3
       
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
         
       - name: Lint with flake8
         run: |
