--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -16,9 +16,7 @@ jobs:
           python-version: 3
       
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+        run: python -m pip install --upgrade pip
         
       - name: Lint with flake8
         run: |
