--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -4,19 +4,15 @@ on:
   push:
     path:
       - '*.py'
-  pull_request:
-    path:
-      - '*.py'
 
 jobs:
   flake8_py3:
     runs-on: ubuntu-latest
     
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      - name: Setup Python
+      - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: 3
@@ -28,14 +24,8 @@ jobs:
         run: pip install flake8
 
       - name: Run flake8
-        run: flake8 .
-
-      #- name: Flake8 action
-        # You may pin to the exact commit or the version.
-      #  uses: suo/flake8-github-action@v1
-      #  with:
-          # The name of the check to add annotations to.
-          # Generally the same as the job that uses this action
-      #    checkName: 'flake8_py3'
-      #  env:
-      #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: suo/flake8-github-action@v1
+        with:
+          checkName: 'flake8_py3'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
