Prueba ignorar F401 modulos importados sin usar

--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -29,3 +29,4 @@ jobs:
           checkName: 'flake8_py3'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          args: "--ignore=F401 ."
