Prueba ignorar archivos python

--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -3,8 +3,8 @@ name: Flake8
 on:
   push:
     path:
-      - '*.py'
-      - '!**__init__.py'
+      - '!**.py'
+      #- '!**__init__.py'
 
 jobs:
   flake8_py3:
