--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -2,9 +2,8 @@ name: Flake8
 
 on:
   push:
-    paths:
-      - '**.py'
-      - '!**/__init__.py'
+    paths-ignore:
+      - '**/__init__.py'
 
 jobs:
   flake8_py3:
