--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   flake8_py3:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     
     steps:
       - uses: actions/checkout@v2
@@ -24,8 +24,9 @@ jobs:
         run: pip install flake8
 
       - name: Run flake8
-        uses: suo/flake8-github-action@v1
+        uses: suo/flake8-github-action@releases/v1
         with:
           checkName: 'flake8_py3'
+          exclude: '**__init__.py'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
