--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -2,6 +2,8 @@ name: Flake8
 
 on:
   push:
+    paths:
+      - '**.py'
 
 jobs:
   flake8_py3:
@@ -22,8 +24,9 @@ jobs:
         run: pip install flake8
 
       - name: Run flake8
-        uses: suo/flake8-github-action@releases/v1
+        uses: suo/flake8-github-action@v1
         with:
           checkName: 'flake8_py3'
+          exclude: '**__init__.py'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
