--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -27,5 +27,6 @@ jobs:
         uses: suo/flake8-github-action@v1
         with:
           checkName: 'flake8_py3'
+          exclude: '**__init__.py'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
