--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
+repos:
 -   repo: https://github.com/pycqa/flake8
-    rev: '3.9.1'
+    rev: 3.9.1
     hooks:
     -   id: flake8
-        files: '**.py'
