--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   flake8_py3:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     
     steps:
       - uses: actions/checkout@v2
